--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>John Hennessy</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Sanjay Kairam</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>John Hennessy is president of Stanford University and enjoys taking HCI classes in his spare time.</p>
+	<p>Sanjay Kairam is the Head TA for CS 147.</p>
 
 	<h4>Projects</h4>
 	<ol>
